# hybrid_test

./: .gitignore  CMakeLists.txt  README.md  lstm.py  scatter.txt  setup.sh  test.py  utils.py
src/: binding.cu  kernel.h  lstm.cu  lstm_cxx.cu  lstmcell.cu  multiply.cu  scatter.cu  tensor.h  utils.h
